flexbox sister projects

--- a/wiki-main-index.html
+++ b/wiki-main-index.html
@@ -35,7 +35,7 @@
 
 <body lang="pl">
 
-	<div class="mw-parser-output">
+	<div class="mw-parser-output mw-body-content">
 		<div class="section" id="main-page">
 			<div class="header" id="main-page-header">
 				<div id="main-page-intro">
@@ -520,15 +520,15 @@
 							    width="38" height="38" srcset="//upload.wikimedia.org/wikipedia/commons/thumb/1/14/Wikimedia-logo-circle.svg/57px-Wikimedia-logo-circle.svg.png 1.5x, //upload.wikimedia.org/wikipedia/commons/thumb/1/14/Wikimedia-logo-circle.svg/76px-Wikimedia-logo-circle.svg.png 2x"
 							    data-file-width="700" data-file-height="700" /> Siostrzane projekty Wikipedii</span>
 					</h2>
-					<div style="float:left; width:33%; min-width:200px;">
-						<div style="margin:auto;width:200px">
-							<div style="float:left;width:50px;">
+					<div class="sister-projects">
+						<div class="sister-project">
+							<div class="sister-image">
 								<div class="center">
 									<div class="floatnone">
 										<a href="https://pl.wiktionary.org/wiki/" title="Wikisłownik">
 											<img alt="Wikisłownik" src="//upload.wikimedia.org/wikipedia/commons/thumb/6/67/WiktionaryPl_nodesc.svg/35px-WiktionaryPl_nodesc.svg.png"
-											    width="35" height="34" srcset="//upload.wikimedia.org/wikipedia/commons/thumb/6/67/WiktionaryPl_nodesc.svg/53px-WiktionaryPl_nodesc.svg.png 1.5x, //upload.wikimedia.org/wikipedia/commons/thumb/6/67/WiktionaryPl_nodesc.svg/70px-WiktionaryPl_nodesc.svg.png 2x"
-											    data-file-width="122" data-file-height="117" />
+												width="35" height="34" srcset="//upload.wikimedia.org/wikipedia/commons/thumb/6/67/WiktionaryPl_nodesc.svg/53px-WiktionaryPl_nodesc.svg.png 1.5x, //upload.wikimedia.org/wikipedia/commons/thumb/6/67/WiktionaryPl_nodesc.svg/70px-WiktionaryPl_nodesc.svg.png 2x"
+												data-file-width="122" data-file-height="117" />
 										</a>
 									</div>
 								</div>
@@ -539,14 +539,14 @@
 								</b>
 								<br /> Wielojęzyczny słownik</p>
 						</div>
-						<div style="margin:auto;width:200px">
-							<div style="float:left;width:50px;">
+						<div class="sister-project">
+							<div class="sister-image">
 								<div class="center">
 									<div class="floatnone">
 										<a href="https://pl.wikinews.org/wiki/" title="Wikinews">
 											<img alt="Wikinews" src="//upload.wikimedia.org/wikipedia/commons/thumb/2/24/Wikinews-logo.svg/45px-Wikinews-logo.svg.png"
-											    width="45" height="25" srcset="//upload.wikimedia.org/wikipedia/commons/thumb/2/24/Wikinews-logo.svg/68px-Wikinews-logo.svg.png 1.5x, //upload.wikimedia.org/wikipedia/commons/thumb/2/24/Wikinews-logo.svg/90px-Wikinews-logo.svg.png 2x"
-											    data-file-width="759" data-file-height="415" />
+												width="45" height="25" srcset="//upload.wikimedia.org/wikipedia/commons/thumb/2/24/Wikinews-logo.svg/68px-Wikinews-logo.svg.png 1.5x, //upload.wikimedia.org/wikipedia/commons/thumb/2/24/Wikinews-logo.svg/90px-Wikinews-logo.svg.png 2x"
+												data-file-width="759" data-file-height="415" />
 										</a>
 									</div>
 								</div>
@@ -557,14 +557,14 @@
 								</b>
 								<br /> Serwis informacyjny</p>
 						</div>
-						<div style="margin:auto;width:200px">
-							<div style="float:left;width:50px;">
+						<div class="sister-project">
+							<div class="sister-image">
 								<div class="center">
 									<div class="floatnone">
 										<a href="https://pl.wikiquote.org/wiki/" title="Wikicytaty">
 											<img alt="Wikicytaty" src="//upload.wikimedia.org/wikipedia/commons/thumb/f/fa/Wikiquote-logo.svg/30px-Wikiquote-logo.svg.png"
-											    width="30" height="36" srcset="//upload.wikimedia.org/wikipedia/commons/thumb/f/fa/Wikiquote-logo.svg/45px-Wikiquote-logo.svg.png 1.5x, //upload.wikimedia.org/wikipedia/commons/thumb/f/fa/Wikiquote-logo.svg/60px-Wikiquote-logo.svg.png 2x"
-											    data-file-width="300" data-file-height="355" />
+												width="30" height="36" srcset="//upload.wikimedia.org/wikipedia/commons/thumb/f/fa/Wikiquote-logo.svg/45px-Wikiquote-logo.svg.png 1.5x, //upload.wikimedia.org/wikipedia/commons/thumb/f/fa/Wikiquote-logo.svg/60px-Wikiquote-logo.svg.png 2x"
+												data-file-width="300" data-file-height="355" />
 										</a>
 									</div>
 								</div>
@@ -575,16 +575,14 @@
 								</b>
 								<br /> Kolekcja cytatów</p>
 						</div>
-					</div>
-					<div style="float:left; width:33%; min-width:200px;">
-						<div style="margin:auto;width:200px">
-							<div style="float:left;width:50px;">
+						<div class="sister-project">
+							<div class="sister-image">
 								<div class="center">
 									<div class="floatnone">
 										<a href="//wikiversity.org/" title="Wikiwersytet">
 											<img alt="Wikiwersytet" src="//upload.wikimedia.org/wikipedia/commons/thumb/9/91/Wikiversity-logo.svg/40px-Wikiversity-logo.svg.png"
-											    width="40" height="32" srcset="//upload.wikimedia.org/wikipedia/commons/thumb/9/91/Wikiversity-logo.svg/60px-Wikiversity-logo.svg.png 1.5x, //upload.wikimedia.org/wikipedia/commons/thumb/9/91/Wikiversity-logo.svg/80px-Wikiversity-logo.svg.png 2x"
-											    data-file-width="1000" data-file-height="800" />
+												width="40" height="32" srcset="//upload.wikimedia.org/wikipedia/commons/thumb/9/91/Wikiversity-logo.svg/60px-Wikiversity-logo.svg.png 1.5x, //upload.wikimedia.org/wikipedia/commons/thumb/9/91/Wikiversity-logo.svg/80px-Wikiversity-logo.svg.png 2x"
+												data-file-width="1000" data-file-height="800" />
 										</a>
 									</div>
 								</div>
@@ -597,14 +595,14 @@
 								</span>
 								<br /> Wolna edukacja</p>
 						</div>
-						<div style="margin:auto;width:200px">
-							<div style="float:left;width:50px;">
+						<div class="sister-project">
+							<div class="sister-image">
 								<div class="center">
 									<div class="floatnone">
 										<a href="https://pl.wikibooks.org/wiki/" title="Wikibooks">
 											<img alt="Wikibooks" src="//upload.wikimedia.org/wikipedia/commons/thumb/f/fa/Wikibooks-logo.svg/35px-Wikibooks-logo.svg.png"
-											    width="35" height="35" srcset="//upload.wikimedia.org/wikipedia/commons/thumb/f/fa/Wikibooks-logo.svg/53px-Wikibooks-logo.svg.png 1.5x, //upload.wikimedia.org/wikipedia/commons/thumb/f/fa/Wikibooks-logo.svg/70px-Wikibooks-logo.svg.png 2x"
-											    data-file-width="300" data-file-height="300" />
+												width="35" height="35" srcset="//upload.wikimedia.org/wikipedia/commons/thumb/f/fa/Wikibooks-logo.svg/53px-Wikibooks-logo.svg.png 1.5x, //upload.wikimedia.org/wikipedia/commons/thumb/f/fa/Wikibooks-logo.svg/70px-Wikibooks-logo.svg.png 2x"
+												data-file-width="300" data-file-height="300" />
 										</a>
 									</div>
 								</div>
@@ -615,14 +613,14 @@
 								</b>
 								<br /> Wolne podręczniki</p>
 						</div>
-						<div style="margin:auto;width:200px">
-							<div style="float:left;width:50px;">
+						<div class="sister-project">
+							<div class="sister-image">
 								<div class="center">
 									<div class="floatnone">
 										<a href="https://pl.wikisource.org/wiki/" title="Wikiźródła">
 											<img alt="Wikiźródła" src="//upload.wikimedia.org/wikipedia/commons/thumb/4/4c/Wikisource-logo.svg/35px-Wikisource-logo.svg.png"
-											    width="35" height="37" srcset="//upload.wikimedia.org/wikipedia/commons/thumb/4/4c/Wikisource-logo.svg/53px-Wikisource-logo.svg.png 1.5x, //upload.wikimedia.org/wikipedia/commons/thumb/4/4c/Wikisource-logo.svg/70px-Wikisource-logo.svg.png 2x"
-											    data-file-width="410" data-file-height="430" />
+												width="35" height="37" srcset="//upload.wikimedia.org/wikipedia/commons/thumb/4/4c/Wikisource-logo.svg/53px-Wikisource-logo.svg.png 1.5x, //upload.wikimedia.org/wikipedia/commons/thumb/4/4c/Wikisource-logo.svg/70px-Wikisource-logo.svg.png 2x"
+												data-file-width="410" data-file-height="430" />
 										</a>
 									</div>
 								</div>
@@ -633,14 +631,14 @@
 								</b>
 								<br /> Wolna biblioteka</p>
 						</div>
-						<div style="margin:auto;width:200px">
-							<div style="float:left;width:50px;">
+						<div class="sister-project">
+							<div class="sister-image">
 								<div class="center">
 									<div class="floatnone">
 										<a href="https://pl.wikivoyage.org/wiki/" title="Wikipodróże">
 											<img alt="Wikipodróże" src="//upload.wikimedia.org/wikipedia/commons/thumb/d/dd/Wikivoyage-Logo-v3-icon.svg/35px-Wikivoyage-Logo-v3-icon.svg.png"
-											    width="35" height="35" srcset="//upload.wikimedia.org/wikipedia/commons/thumb/d/dd/Wikivoyage-Logo-v3-icon.svg/53px-Wikivoyage-Logo-v3-icon.svg.png 1.5x, //upload.wikimedia.org/wikipedia/commons/thumb/d/dd/Wikivoyage-Logo-v3-icon.svg/70px-Wikivoyage-Logo-v3-icon.svg.png 2x"
-											    data-file-width="193" data-file-height="193" />
+												width="35" height="35" srcset="//upload.wikimedia.org/wikipedia/commons/thumb/d/dd/Wikivoyage-Logo-v3-icon.svg/53px-Wikivoyage-Logo-v3-icon.svg.png 1.5x, //upload.wikimedia.org/wikipedia/commons/thumb/d/dd/Wikivoyage-Logo-v3-icon.svg/70px-Wikivoyage-Logo-v3-icon.svg.png 2x"
+												data-file-width="193" data-file-height="193" />
 										</a>
 									</div>
 								</div>
@@ -651,16 +649,14 @@
 								</b>
 								<br /> Informacje turystyczne</p>
 						</div>
-					</div>
-					<div style="float:left; width:33%; min-width:200px;">
-						<div style="margin:auto;width:200px">
-							<div style="float:left;width:50px;">
+						<div class="sister-project">
+							<div class="sister-image">
 								<div class="center">
 									<div class="floatnone">
 										<a href="https://www.wikidata.org/wiki/" title="Wikidane">
 											<img alt="Wikidane" src="//upload.wikimedia.org/wikipedia/commons/thumb/f/ff/Wikidata-logo.svg/45px-Wikidata-logo.svg.png"
-											    width="45" height="25" srcset="//upload.wikimedia.org/wikipedia/commons/thumb/f/ff/Wikidata-logo.svg/68px-Wikidata-logo.svg.png 1.5x, //upload.wikimedia.org/wikipedia/commons/thumb/f/ff/Wikidata-logo.svg/90px-Wikidata-logo.svg.png 2x"
-											    data-file-width="1050" data-file-height="590" />
+												width="45" height="25" srcset="//upload.wikimedia.org/wikipedia/commons/thumb/f/ff/Wikidata-logo.svg/68px-Wikidata-logo.svg.png 1.5x, //upload.wikimedia.org/wikipedia/commons/thumb/f/ff/Wikidata-logo.svg/90px-Wikidata-logo.svg.png 2x"
+												data-file-width="1050" data-file-height="590" />
 										</a>
 									</div>
 								</div>
@@ -671,14 +667,14 @@
 								</b>
 								<br /> Repozytorium danych</p>
 						</div>
-						<div style="margin:auto;width:200px">
-							<div style="float:left;width:50px;">
+						<div class="sister-project">
+							<div class="sister-image">
 								<div class="center">
 									<div class="floatnone">
 										<a href="https://commons.wikimedia.org/wiki/" title="Commons">
 											<img alt="Commons" src="//upload.wikimedia.org/wikipedia/commons/thumb/4/4a/Commons-logo.svg/30px-Commons-logo.svg.png"
-											    width="30" height="40" srcset="//upload.wikimedia.org/wikipedia/commons/thumb/4/4a/Commons-logo.svg/45px-Commons-logo.svg.png 1.5x, //upload.wikimedia.org/wikipedia/commons/thumb/4/4a/Commons-logo.svg/60px-Commons-logo.svg.png 2x"
-											    data-file-width="1024" data-file-height="1376" />
+												width="30" height="40" srcset="//upload.wikimedia.org/wikipedia/commons/thumb/4/4a/Commons-logo.svg/45px-Commons-logo.svg.png 1.5x, //upload.wikimedia.org/wikipedia/commons/thumb/4/4a/Commons-logo.svg/60px-Commons-logo.svg.png 2x"
+												data-file-width="1024" data-file-height="1376" />
 										</a>
 									</div>
 								</div>
@@ -689,14 +685,14 @@
 								</b>
 								<br /> Repozytorium mediów</p>
 						</div>
-						<div style="margin:auto;width:200px">
-							<div style="float:left;width:50px;">
+						<div class="sister-project">
+							<div class="sister-image">
 								<div class="center">
 									<div class="floatnone">
 										<a href="https://species.wikimedia.org/wiki/" title="Wikispecies">
 											<img alt="Wikispecies" src="//upload.wikimedia.org/wikipedia/commons/thumb/d/df/Wikispecies-logo.svg/35px-Wikispecies-logo.svg.png"
-											    width="35" height="41" srcset="//upload.wikimedia.org/wikipedia/commons/thumb/d/df/Wikispecies-logo.svg/53px-Wikispecies-logo.svg.png 1.5x, //upload.wikimedia.org/wikipedia/commons/thumb/d/df/Wikispecies-logo.svg/70px-Wikispecies-logo.svg.png 2x"
-											    data-file-width="941" data-file-height="1103" />
+												width="35" height="41" srcset="//upload.wikimedia.org/wikipedia/commons/thumb/d/df/Wikispecies-logo.svg/53px-Wikispecies-logo.svg.png 1.5x, //upload.wikimedia.org/wikipedia/commons/thumb/d/df/Wikispecies-logo.svg/70px-Wikispecies-logo.svg.png 2x"
+												data-file-width="941" data-file-height="1103" />
 										</a>
 									</div>
 								</div>
@@ -708,7 +704,6 @@
 								<br /> Katalog gatunków</p>
 						</div>
 					</div>
-					<div style="line-height:0px;height:0px;clear:both"></div>
 				</div>
 				<div class="section" id="main-page-wikimedia">
 					<h2>
