grid with spacer columns

--- a/wiki-main-index.html
+++ b/wiki-main-index.html
@@ -521,7 +521,6 @@
 							    data-file-width="700" data-file-height="700" /> Siostrzane projekty Wikipedii</span>
 					</h2>
 					<div class="sister-projects">
-						<div class="sister-project">
 							<div class="sister-image">
 								<div class="center">
 									<div class="floatnone">
@@ -538,9 +537,7 @@
 									<a href="https://pl.wiktionary.org/wiki/" class="extiw" title="wikt:">Wikisłownik</a>
 								</b>
 								<br /> Wielojęzyczny słownik</p>
-						</div>
-						<div class="sister-project">
-							<div class="sister-image">
+							<div class="spacer"></div><div class="sister-image">
 								<div class="center">
 									<div class="floatnone">
 										<a href="https://pl.wikinews.org/wiki/" title="Wikinews">
@@ -556,9 +553,7 @@
 									<a href="https://pl.wikinews.org/wiki/" class="extiw" title="n:">Wikinews</a>
 								</b>
 								<br /> Serwis informacyjny</p>
-						</div>
-						<div class="sister-project">
-							<div class="sister-image">
+							<div class="spacer"></div><div class="sister-image">
 								<div class="center">
 									<div class="floatnone">
 										<a href="https://pl.wikiquote.org/wiki/" title="Wikicytaty">
@@ -574,9 +569,7 @@
 									<a href="https://pl.wikiquote.org/wiki/" class="extiw" title="q:">Wikicytaty</a>
 								</b>
 								<br /> Kolekcja cytatów</p>
-						</div>
-						<div class="sister-project">
-							<div class="sister-image">
+							<div class="spacer"></div><div class="sister-image">
 								<div class="center">
 									<div class="floatnone">
 										<a href="//wikiversity.org/" title="Wikiwersytet">
@@ -594,9 +587,7 @@
 									</b>
 								</span>
 								<br /> Wolna edukacja</p>
-						</div>
-						<div class="sister-project">
-							<div class="sister-image">
+							<div class="spacer"></div><div class="sister-image">
 								<div class="center">
 									<div class="floatnone">
 										<a href="https://pl.wikibooks.org/wiki/" title="Wikibooks">
@@ -612,9 +603,7 @@
 									<a href="https://pl.wikibooks.org/wiki/" class="extiw" title="b:">Wikibooks</a>
 								</b>
 								<br /> Wolne podręczniki</p>
-						</div>
-						<div class="sister-project">
-							<div class="sister-image">
+							<div class="spacer"></div><div class="sister-image">
 								<div class="center">
 									<div class="floatnone">
 										<a href="https://pl.wikisource.org/wiki/" title="Wikiźródła">
@@ -630,9 +619,7 @@
 									<a href="https://pl.wikisource.org/wiki/" class="extiw" title="s:">Wikiźródła</a>
 								</b>
 								<br /> Wolna biblioteka</p>
-						</div>
-						<div class="sister-project">
-							<div class="sister-image">
+							<div class="spacer"></div><div class="sister-image">
 								<div class="center">
 									<div class="floatnone">
 										<a href="https://pl.wikivoyage.org/wiki/" title="Wikipodróże">
@@ -648,9 +635,7 @@
 									<a href="https://pl.wikivoyage.org/wiki/" class="extiw" title="voy:">Wikipodróże</a>
 								</b>
 								<br /> Informacje turystyczne</p>
-						</div>
-						<div class="sister-project">
-							<div class="sister-image">
+							<div class="spacer"></div><div class="sister-image">
 								<div class="center">
 									<div class="floatnone">
 										<a href="https://www.wikidata.org/wiki/" title="Wikidane">
@@ -666,9 +651,7 @@
 									<a href="https://www.wikidata.org/wiki/" class="extiw" title="d:">Wikidane</a>
 								</b>
 								<br /> Repozytorium danych</p>
-						</div>
-						<div class="sister-project">
-							<div class="sister-image">
+							<div class="spacer"></div><div class="sister-image">
 								<div class="center">
 									<div class="floatnone">
 										<a href="https://commons.wikimedia.org/wiki/" title="Commons">
@@ -684,9 +667,7 @@
 									<a href="https://commons.wikimedia.org/wiki/" class="extiw" title="commons:">Commons</a>
 								</b>
 								<br /> Repozytorium mediów</p>
-						</div>
-						<div class="sister-project">
-							<div class="sister-image">
+							<div class="spacer"></div><div class="sister-image">
 								<div class="center">
 									<div class="floatnone">
 										<a href="https://species.wikimedia.org/wiki/" title="Wikispecies">
@@ -702,7 +683,6 @@
 									<a href="https://species.wikimedia.org/wiki/" class="extiw" title="wikispecies:">Wikispecies</a>
 								</b>
 								<br /> Katalog gatunków</p>
-						</div>
 					</div>
 				</div>
 				<div class="section" id="main-page-wikimedia">
