--- a/wiki-main-index.html
+++ b/wiki-main-index.html
@@ -720,27 +720,36 @@
 								    width="55" height="55" srcset="//upload.wikimedia.org/wikipedia/commons/thumb/1/14/Wikimedia-logo-circle.svg/83px-Wikimedia-logo-circle.svg.png 1.5x, //upload.wikimedia.org/wikipedia/commons/thumb/1/14/Wikimedia-logo-circle.svg/110px-Wikimedia-logo-circle.svg.png 2x"
 								    data-file-width="700" data-file-height="700" />
 							</a>
+							<div>
 							<b>
 								<a href="https://wikimediafoundation.org/wiki/Strona_g%C5%82%C3%B3wna" class="extiw" title="wikimedia:Strona główna">Wikimedia Foundation</a>
-							</b> ponosi prawną i techniczną odpowiedzialność za Wikipedię.</p>
+							</b> ponosi prawną i techniczną odpowiedzialność za Wikipedię.
+							</div>
+						</p>
 						<p>
 							<a href="https://pl.wikimedia.org/wiki/" title="Wikimedia Polska">
 								<img alt="Wikimedia Polska" src="//upload.wikimedia.org/wikipedia/commons/thumb/8/8c/Wikimedia_Polska_logo.svg/50px-Wikimedia_Polska_logo.svg.png"
 								    width="50" height="50" srcset="//upload.wikimedia.org/wikipedia/commons/thumb/8/8c/Wikimedia_Polska_logo.svg/75px-Wikimedia_Polska_logo.svg.png 1.5x, //upload.wikimedia.org/wikipedia/commons/thumb/8/8c/Wikimedia_Polska_logo.svg/100px-Wikimedia_Polska_logo.svg.png 2x"
 								    data-file-width="285" data-file-height="285" />
 							</a>
+							<div>
 							<b>
 								<a href="https://pl.wikimedia.org/wiki/" class="extiw" title="wmpl:">Stowarzyszenie Wikimedia Polska</a>
-							</b> promuje i wspiera tworzenie Wikipedii w Polsce.</p>
+							</b> promuje i wspiera tworzenie Wikipedii w Polsce.
+							</div>
+						</p>
 						<p>
 							<a href="https://meta.wikimedia.org/wiki/Strona_g%C5%82%C3%B3wna" title="Meta-wiki">
 								<img alt="Meta-wiki" src="//upload.wikimedia.org/wikipedia/commons/thumb/0/07/HSWikimedia.svg/55px-HSWikimedia.svg.png"
 								    width="55" height="55" srcset="//upload.wikimedia.org/wikipedia/commons/thumb/0/07/HSWikimedia.svg/83px-HSWikimedia.svg.png 1.5x, //upload.wikimedia.org/wikipedia/commons/thumb/0/07/HSWikimedia.svg/110px-HSWikimedia.svg.png 2x"
 								    data-file-width="156" data-file-height="156" />
 							</a>
+							<div>
 							<b>
 								<a href="https://meta.wikimedia.org/wiki/Strona_g%C5%82%C3%B3wna" class="extiw" title="meta:Strona główna">Meta-Wiki</a>
-							</b> jest miejscem koordynacji wszystkich projektów Wikimedia.</p>
+							</b> jest miejscem koordynacji wszystkich projektów Wikimedia.
+							</div>
+						</p>
 					</div>
 					<div>
 						<p>Jeżeli jesteś nowym użytkownikiem Wikipedii, możesz znaleźć pomoc u innych członków
