--- a/wiki-main-index.html
+++ b/wiki-main-index.html
@@ -26,7 +26,8 @@
 	var localBase = location.href.replace(/\/[^\/]+$/, '/');
 
 	var link = document.createElement( "link" );
-	link.href = localBase + "style.css?1555";
+	// invalidate cache every minute
+	link.href = localBase + "style.css?" + Math.round((new Date()).getTime()/1000/60);
 	link.rel = "stylesheet";
 	link.type = "text/css";
 
