--- a/wiki-main-index.html
+++ b/wiki-main-index.html
@@ -780,9 +780,13 @@
 					<div class="main-page-threecol">
 						<p>
 							<a href="https://wikimediafoundation.org/wiki/Strona_g%C5%82%C3%B3wna" title="Wikimedia Foundation">
+								<!--
 								<img alt="Wikimedia Foundation" src="//upload.wikimedia.org/wikipedia/commons/thumb/1/14/Wikimedia-logo-circle.svg/55px-Wikimedia-logo-circle.svg.png"
 								    width="55" height="55" srcset="//upload.wikimedia.org/wikipedia/commons/thumb/1/14/Wikimedia-logo-circle.svg/83px-Wikimedia-logo-circle.svg.png 1.5x, //upload.wikimedia.org/wikipedia/commons/thumb/1/14/Wikimedia-logo-circle.svg/110px-Wikimedia-logo-circle.svg.png 2x"
 								    data-file-width="700" data-file-height="700" />
+								-->
+								<img alt="Wikimedia Foundation" src="https://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg"
+								    width="40" />
 							</a>
 							<span>
 							<b>
@@ -804,9 +808,13 @@
 						</p>
 						<p>
 							<a href="https://meta.wikimedia.org/wiki/Strona_g%C5%82%C3%B3wna" title="Meta-wiki">
+								<!--
 								<img alt="Meta-wiki" src="//upload.wikimedia.org/wikipedia/commons/thumb/0/07/HSWikimedia.svg/55px-HSWikimedia.svg.png"
 								    width="55" height="55" srcset="//upload.wikimedia.org/wikipedia/commons/thumb/0/07/HSWikimedia.svg/83px-HSWikimedia.svg.png 1.5x, //upload.wikimedia.org/wikipedia/commons/thumb/0/07/HSWikimedia.svg/110px-HSWikimedia.svg.png 2x"
-								    data-file-width="156" data-file-height="156" />
+									data-file-width="156" data-file-height="156" />
+								-->
+								<img alt="Meta-wiki" src="https://upload.wikimedia.org/wikipedia/commons/7/75/Wikimedia_Community_Logo.svg"
+								    width="40" />
 							</a>
 							<span>
 							<b>
