--- a/wiki-main-index.html
+++ b/wiki-main-index.html
@@ -117,6 +117,7 @@
 						    title="Wikipedia:Wyróżniona zawartość Wikipedii">wyróżnionych</a>
 					</p>
 				</div>
+				<div id="main-page-book">&nbsp;</div>
 				<div id="main-page-portals">
 					<p>
 						<span>
